# pptx-parser-for-ai

./: .env.example  .gitignore  AGENTS.md  APP_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SEMANTIC_DECK_SPEC.md  compose.yaml  eslint.config.mjs  guid.md  package-lock.json  package.json  plan.md  pyproject.toml  tech.md  test.md  tsconfig.build.json  tsconfig.json  vitest.config.ts  タスク.ToDo
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  security-bot-automerge.yml  security.yml
docs/: api-reference.md  functional-requirements.md  index.md  migration-v1-to-v2.md  release-checklist.md  template-design-spec.md  usage-guide.md
docs/design-investigations/: 2026-06-08-default-enterprise-regression.md
example/: README.md  run-example-tests.ts
example/basic/: generate.ts  presentation.yaml
example/network/: generate.ts  output-network.pptx  presentation.yaml
example/preset-v2/: generate.ts  presentation-with-template.yaml  presentation.yaml
example/product-launch/: generate.ts  presentation.yaml
example/security-brief/: generate.ts  (+1 more)
mcp-app-server/: Dockerfile
scripts/: make_default_template.py  sanitize_pptx_template.py
src/: constants.ts  errors.ts  index.ts
templates/: README.md  default.manifest.json  default.pptx
tests/: conftest.py
themes/: corporate-blue.yaml  creative-bold.yaml  modern-minimal.yaml  venture-teal.yaml
website/: _config.yml  api.md  examples.md  getting-started.md  index.md  security.md
(+153 files in other folders)
